# solana-copy-trade-bot

./: .env.example  Cargo.toml  target_list.txt  tokens_list.txt
src/: client.rs  config.rs  decoder.rs  engine.rs  gen_engine.rs  keypair.rs  main.rs  target_list.rs  trade_info.rs
src/raydium/: amm.rs  amm_math.rs  amm_types.rs  builder.rs  math.rs  mod.rs  serum.rs  serum_error.rs  serum_types.rs  types.rs  utils.rs
src/raydium/amm/: executor.rs
src/raydium/api_v3/: client.rs  mod.rs
src/raydium/api_v3/response/: token.rs
src/raydium/api_v3/response/pools/: base.rs  clmm.rs  cpmm.rs  standard.rs
