[package]
name = "sol-test"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"
env_logger = "0.11.8"
yellowstone-grpc-client = "6.1.0"
maplit = "1.0.2"
solana-sdk = "2.2.2"
yellowstone-grpc-proto = "6.1.0"
spl-associated-token-account = "7.0.0"
log = "0.4.27"
spl-token = "8.0.0"
futures = "0.3.31"
solana-client = "2.2.7"
rand = "0.9.1"
solana-program = "2.1.0"
bytemuck = "1.23.1"
borsh = "1.5.7"
reqwest = "0.11.27"
serde = { version = "1.0.219", features = ["derive"] }