[package]
name = "sol-test"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"
env_logger = "0.11.8"
yellowstone-grpc-client = "6.1.0"
maplit = "1.0.2"
solana-sdk = "2.2.2"
yellowstone-grpc-proto = "6.1.0"
log = "0.4.27"
futures = "0.3.31"
solana-client = "2.2.7"
serde = "1.0.219"
serde_json = "1.0.140"
borsh = "1.5.7"
futures-util = "0.3.31"
solana-account-decoder = "2.2.7"
arrayref = { version = "0.3.6" }
safe-transmute = "0.11.3"
spl-token = "8.0.0"
bytemuck = "1.23.1"
enumflags2 = "0.6.4"
num_enum = "0.7.3"
thiserror = "2.0.12"
solana-program = "2.2.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
uint = "0.10.0"